--- a/src/main/resources/com/example/dealership/GasGas.fxml
+++ b/src/main/resources/com/example/dealership/GasGas.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -7,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dealership.ControllerGasGas">
    <children>
       <ScrollPane layoutX="2.0" layoutY="-1.0" prefHeight="600.0" prefWidth="900.0">
          <content>
@@ -42,6 +43,11 @@
                      </font>
                   </Text>
                   <Text layoutX="69.0" layoutY="642.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WEIGHT (WITHOUT FUEL): 103.3 kg, TANK CAPACITY (APPROX.): 7.9 l, WHEELBASE: 1493 mm, FRONT BRAKE DISC DIAMETER: 260 mm" wrappingWidth="695.0" />
+                  <Button fx:id="Button" layoutX="17.0" layoutY="14.0" mnemonicParsing="false" onAction="#onbuttonClicked" prefHeight="25.0" prefWidth="35.0" text="◀">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
                </children>
             </AnchorPane>
          </content>
