--- a/src/main/resources/com/example/dealership/GasGas.fxml
+++ b/src/main/resources/com/example/dealership/GasGas.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,7 +11,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dealership.ControllerGasGas">
    <children>
-      <ScrollPane layoutX="2.0" layoutY="-1.0" prefHeight="600.0" prefWidth="900.0">
+      <ScrollPane prefHeight="600.0" prefWidth="900.0">
          <content>
             <AnchorPane prefHeight="612.0" prefWidth="900.0">
                <children>
@@ -30,8 +31,8 @@
                         <Font name="Dubai Light" size="21.0" />
                      </font>
                   </Text>
-                  <Text layoutX="69.0" layoutY="466.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Favoring only the brave, the MC 450F delivers some serious performance! But with plenty of high-level electronic wizardry, the power is put to the ground in such a controllable way that'll you be going fast without even realizing. Complete with new, even less restrictive ergonomics, and with WP Suspension and an agile chassis that ensures precise handling, it's a big bike that's super-fun and super-easy to ride." wrappingWidth="695.0" />
-                  <Text layoutX="69.0" layoutY="579.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TRANSMISSION: 5-speed, BATTERY CAPACITY: 2 Ah, COOLING: Liquid cooled, STARTER: Electric starter" wrappingWidth="695.0" />
+                  <Text layoutX="69.0" layoutY="466.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Favoring only the brave, the MC 450F delivers some serious performance! But with plenty of high-level electronic wizardry, the power is put to the ground in such a controllable way that'll you be going fast without even realizing. Complete with new, even less restrictive ergonomics, and with WP Suspension and an agile chassis that ensures precise handling, it's a big bike that's super-fun and super-easy to ride." textAlignment="JUSTIFY" wrappingWidth="695.0" />
+                  <Text layoutX="69.0" layoutY="579.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TRANSMISSION: 5-speed, BATTERY CAPACITY: 2 Ah, COOLING: Liquid cooled, STARTER: Electric starter" textAlignment="JUSTIFY" wrappingWidth="695.0" />
                   <Text layoutX="69.0" layoutY="548.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Engine:">
                      <font>
                         <Font name="Dubai Light" size="21.0" />
@@ -42,12 +43,19 @@
                         <Font name="Dubai Light" size="21.0" />
                      </font>
                   </Text>
-                  <Text layoutX="69.0" layoutY="642.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WEIGHT (WITHOUT FUEL): 103.3 kg, TANK CAPACITY (APPROX.): 7.9 l, WHEELBASE: 1493 mm, FRONT BRAKE DISC DIAMETER: 260 mm" wrappingWidth="695.0" />
+                  <Text layoutX="69.0" layoutY="643.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WEIGHT (WITHOUT FUEL): 103.3 kg, TANK CAPACITY (APPROX.): 7.9 l, WHEELBASE: 1493 mm, FRONT BRAKE DISC DIAMETER: 260 mm" textAlignment="JUSTIFY" wrappingWidth="695.0" />
                   <Button fx:id="Button" layoutX="17.0" layoutY="14.0" mnemonicParsing="false" onAction="#onbuttonClicked" prefHeight="25.0" prefWidth="35.0" text="◀">
                      <font>
                         <Font size="20.0" />
                      </font>
                   </Button>
+                  <Button layoutX="824.0" layoutY="27.0" mnemonicParsing="false" onAction="#onAddClicked" text="Add" />
+                  <TextArea layoutX="65.0" layoutY="730.0" prefHeight="200.0" prefWidth="770.0" />
+                  <Text layoutX="69.0" layoutY="708.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Comments">
+                     <font>
+                        <Font name="Dubai Light" size="21.0" />
+                     </font>
+                  </Text>
                </children>
             </AnchorPane>
          </content>
