--- a/src/main/resources/com/example/dealership/ShoppingCart.fxml
+++ b/src/main/resources/com/example/dealership/ShoppingCart.fxml
@@ -1,8 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dealership.ShoppingCart">
-
+   <children>
+      <AnchorPane layoutX="607.0" prefHeight="600.0" prefWidth="297.0" style="-fx-background-color: #BBBBBB;">
+         <children>
+            <Text layoutX="14.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Shopping cart">
+               <font>
+                  <Font name="Dubai Medium" size="25.0" />
+               </font>
+            </Text>
+            <Button layoutX="120.0" layoutY="543.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="78.0" style="-fx-background-color: #FF0000;" text="Pay" textAlignment="CENTER">
+               <font>
+                  <Font name="Dubai Medium" size="12.0" />
+               </font>
+            </Button>
+            <Text layoutX="187.0" layoutY="442.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total: " />
+            <Text layoutX="19.0" layoutY="185.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1--------------------------------------------12.000" wrappingWidth="254.13665771484375" />
+            <Text layoutX="19.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="4-----------------------------------------------230" wrappingWidth="254.13665771484375" />
+            <Text layoutX="228.0" layoutY="442.0" strokeType="OUTSIDE" strokeWidth="0.0" text="12.230 €" />
+            <Text layoutX="19.0" layoutY="148.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Products" />
+            <Text layoutX="21.0" layoutY="376.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Delivery" />
+            <Text layoutX="19.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" text="---------------------------------------------------0" wrappingWidth="254.13665771484375" />
+            <Line endX="25.89288330078125" layoutX="272.0" layoutY="415.0" startX="-272.0" />
+         </children>
+      </AnchorPane>
+      <Line endX="100.0" layoutX="506.0" layoutY="170.0" startX="-506.0" startY="-1.52587890625E-5" />
+      <Line endX="100.0" layoutX="506.0" layoutY="200.0" startX="-506.0" startY="-1.52587890625E-5" />
+      <Line endX="100.0" layoutX="506.0" layoutY="230.0" startX="-506.0" startY="-1.52587890625E-5" />
+      <Line endX="100.0" layoutX="506.0" layoutY="290.0" startX="-506.0" startY="-1.52587890625E-5" />
+      <Line endX="100.0" layoutX="506.0" layoutY="260.0" startX="-506.0" startY="-1.52587890625E-5" />
+      <ImageView fitHeight="135.0" fitWidth="132.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../images/logoConcesionario.jpeg" />
+         </image>
+      </ImageView>
+      <Text layoutX="14.0" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" text="GasGas MC450" wrappingWidth="342.93671798706055">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
+      <Text layoutX="14.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Spark Plug" wrappingWidth="342.93671798706055">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
+      <Button fx:id="continueShopping" layoutX="244.0" layoutY="549.0" mnemonicParsing="false" onAction="#continueShopping" text="Continue shopping" />
+   </children>
 </AnchorPane>
