--- a/src/main/resources/com/example/dealership/ShoppingCart.fxml
+++ b/src/main/resources/com/example/dealership/ShoppingCart.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.dealership.ShoppingCart">
    <children>
@@ -43,16 +43,13 @@
             <Image url="@../../../images/logoConcesionario.jpeg" />
          </image>
       </ImageView>
-      <Text layoutX="14.0" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" text="GasGas MC450" wrappingWidth="342.93671798706055">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <Text layoutX="14.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Spark Plug" wrappingWidth="342.93671798706055">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
       <Button fx:id="continueShopping" layoutX="244.0" layoutY="549.0" mnemonicParsing="false" onAction="#continueShopping" text="Continue shopping" />
+      <Label fx:id="thingAdded" layoutX="4.0" layoutY="170.0" prefHeight="30.0" prefWidth="599.0">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Label>
    </children>
+
+
 </AnchorPane>
