--- a/src/main/resources/com/example/dealership/princPage.fxml
+++ b/src/main/resources/com/example/dealership/princPage.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
@@ -87,5 +88,14 @@
           </TitledPane>
         </panes>
       </Accordion>
+      <AnchorPane prefHeight="524.0" prefWidth="900.0">
+         <children>
+            <Button layoutX="823.0" layoutY="14.0" mnemonicParsing="false" onAction="#onShoppingCart" prefHeight="54.0" prefWidth="55.0" text="🛒">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
    </children>
 </VBox>
